igw.tf
resource "aws_internet_gateway" "dev-igw" {
    vpc_id = aws_vpc.dev.id
    tags = {
        Name = "dev-igw"
    }
}
